--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
   </head>
   <body>
     <header>
@@ -95,27 +95,54 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/photo4.jpg" alt="Product Designer's photo" />
+            <img
+              src="./images/photo4.jpg"
+              alt="Product Designer's photo"
+              width="264"
+              height="260"
+            />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/photo5.jpg" alt="Frontend Developer's photo" />
+            <img
+              src="./images/photo5.jpg"
+              alt="Frontend Developer's photo"
+              width="264"
+              height="260"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/photo6.jpg" alt="photo of a marceter" />
+            <img
+              src="./images/photo6.jpg"
+              alt="photo of a marceter"
+              width="264"
+              height="260"
+            />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/photo7.jpg" alt="UI Designer's photo" />
+            <img
+              src="./images/photo7.jpg"
+              alt="UI Designer's photo"
+              width="264"
+              height="260"
+            />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
+    <footer>
+      <a href=".index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
